# gnn_student_teacher

./: DEVELOP.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml
gnn_student_teacher/: analysis.py  cli.py  layers.py  models.py  typing.py  util.py  visualization.py
gnn_student_teacher/data/: persistent.py  structures.py
gnn_student_teacher/examples/: analysis_single.py
gnn_student_teacher/experiments/: create_explanations_megan_aqsoldb.py  create_explanations_megan_rb_motifs.py  sweep_dataset_size.py  sweep_explanations_rb_motifs.py  sweep_student_architecture.py  vgd_create_model_explanations.py  vgd_create_model_explanations_gnnx_mutagenicity_exp.py  vgd_create_model_explanations_grad.py  vgd_create_model_explanations_grad_mutagenicity_exp.py  vgd_create_model_explanations_megan.py  vgd_create_model_explanations_megan_aqsoldb.py  vgd_create_model_explanations_megan_mutagenicity_exp.py  vgd_student.py  vgd_student_gnes.py  vgd_student_gnes_rb_adv_motifs_2.py  vgd_student_gnes_rb_adv_motifs_2_sweep_gnn.py  vgd_student_megan.py  vgd_student_megan_aqsoldb_2.py  vgd_student_megan_aqsoldb_2_sweep_xai.py  vgd_student_megan_bbbp_2.py  vgd_student_megan_mutagenicity_exp_2.py  vgd_student_megan_rb_adv_motifs_2.py  vgd_student_megan_rb_adv_motifs_2_sweep_adversarial.py  vgd_student_megan_rb_adv_motifs_2_sweep_dataset_size.py  vgd_student_megan_rb_adv_motifs_2_sweep_explanation_noise.py  (+4 more)
tests/: test__util.py  test_analysis.py  test_data_persistent.py  test_data_structures.py  test_students.py  test_students_keras.py  test_students_torch.py  test_util.py  util.py
(+5 files in other folders)
