[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gnn_student_teacher"
version = "0.1.0"
description = "Insert Description"
license = "MIT license"
authors = ["anon_cyel9u <anon_r8rfyl>"]
maintainers = ["anon_cyel9u <anon_r8rfyl>"]
readme = "README.rst"
keywords = []
packages = [
    { include = "gnn_student_teacher" },
    #   { include = "gnn_student_teacher/experiments"},
]
exclude = [
    "gnn_student_teacher/experiments/results",
    "gnn_student_teacher/experiments/results/*",
]
include = [
    "gnn_student_teacher/VERSION",
]

[tool.poetry.scripts]
gnn_student_teacher = 'gnn_student_teacher.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
pycomex = ">=0.8.1"
click = ">=7.1.2"
jinja2 = ">=3.0.3"
imageio = ">=2.22.1"
matplotlib = ">=3.5.3"
numpy = ">=1.23.2"
python-decouple = ">=3.6"
tensorflow = ">=2.10.0"
kgcnn = ">2.1.0"
scikit-learn = ">=1.1.2"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
poetry-bumpversion = ">=0.3.0"

[tool.poetry_bumpversion.file."gnn_student_teacher/VERSION"]
search = "{current_version}"
replace = "{new_version}"

[tool.poetry_bumpversion.file."README.rst"]
search = 'version-{current_version}-orange.svg'
replace = 'version-{new_version}-orange.svg'

[tool.poetry_bumpversion.file."gnn_student_teacher/__init__.py"]
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'